# GB-X6EVG-GCC-20240621-V301

./: .cproject  .project  CMakeLists.txt  CMakePresets.json  RTS591x.svd
Crypto/: CMakeLists.txt  Include.h  config.h
Crypto/AES/: AES_Slave.c  Aes_Dma.c  RTK_dmac.c
Crypto/AES/Include/: AES_Slave.h  RTK_common_bitops.h  RTK_common_dbc.h  RTK_common_errno.h  RTK_common_io.h  RTK_common_list.h  RTK_common_types.h  RTK_dmac_defs.h  RTK_dmac_private.h  RTK_dmac_public.h  aes.h  build_info.h  common.h  error.h  mbedtls_config.h  platform.h  platform_time.h  platform_util.h
Crypto/HMAC/: md.c  md.h  md_wrap.h
Crypto/SHA2/: Lalu_SHA2.c  Sha256_api.c  Sha512_api.c
Crypto/SHA2/Include/: Lalu_SHA2.h  Sha256_api.h  Sha512_api.h
Crypto/SHA3/: Lalu_SHA3.c  Sha3.c  keccak.c  shake.c
Crypto/SHA3/Include/: Lalu_SHA3.h  Sha3.h  keccak.h  shake.h
cmake/: RTKToolChain.cmake  RTS5911.cmake
include/: RTK_Include.h  annotation.h
include/armv8m/: cmsis_gcc.h  core_armv8mml.h
include/hal/: ACPI.h  DIO.h  DMA.h  EMI.h  ESPI_MAFS.h  ESPI_OOB.h  ESPI_SAFS.h  GPIO.h  I2C.h  KBC.h  KBM.h  LED.h  MBX.h  MONOTONIC_COUNTER.h  P80P81.h  PECI.h  PMPORT0.h  PMPORT1.h  PMPORT2.h  PMPORT3.h  PS2.h  PWM.h  PerVW.h  SPI.h  SPIC.h  SYSTEM.h  TACHO.h  TIMER.h  UART.h  WDT.h  adc.h  eRPMC.h
include/system/: ACPI_Command.h  Debug.h  Flashtool.h  KBC_Command.h  Memory.h  Type.h  interrupt.h  peripheral.h
ldscripts/: rts5911.ld
src/system/: Debug.c  (+7 more)
util/: key1.pem  libscrc._canx.pyd  libscrc._crc16.pyd  libscrc._crc24.pyd  libscrc._crc32.pyd  libscrc._crc64.pyd  libscrc._crc8.pyd  libscrc._crcx.pyd
(+87 files in other folders)
